backend/Kubernetes/_employee-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: employeeservice
  ports:
    - name: employee
      protocol: TCP
      port: 80
      targetPort: 80
