backend/Kubernetes/_nginx_loadbalancer_example.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rbmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672 
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
