backend/Kubernetes/deploy-employee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeeservice
  template:
    metadata:
      labels:
        app: employeeservice
    spec:
      containers:
        - name: employeeservice
          image: dkmoelgaard75/employeeservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: employee-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: employeeservice
  ports:
  - name: employeeservice
    protocol: TCP
    port: 80
    targetPort: 80
