backend/Kubernetes/postgres-db-deploy-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-customer-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-customer
  ports:
  - name: postgres-customer
    protocol: TCP
    port: 5432
    targetPort: 5432 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db-customer
spec:
  serviceName: postgres-customer-clusterip-srv
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db-customer
  template:
    metadata:
      labels:
        app: postgres-db-customer
    spec:
      containers:
        - name: postgres-db-customer
          image: postgres:10.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-customer-pv-storage
              mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-customer-pv-storage
        persistentVolumeClaim:
          claimName: postgres-customer-pv-claim
