backend/Kubernetes/postgres-db-deploy-taskobj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-taskobj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-taskobj
  template:
    metadata:
      labels:
        app: postgres-taskobj
    spec:
      containers:
        - name: postgres-taskobj
          image: postgres:10.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/taskobj/data
              name: postgres-taskobj-pv-claim
      volumes:
      - name: postgres-taskobj-pv-claim
        persistentVolumeClaim:
          claimName: postgres-taskobj-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-taskobj-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-taskobj
  ports:
  - name: postgres-taskobj
    protocol: TCP
    port: 5432
    targetPort: 5432
