backend/Kubernetes/postgres-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
