backend/Kubernetes/postgres-nodeport-taskobj-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport-task-srv
spec:
  type: NodePort
  selector:
    app: postgres-taskobj
  ports:
    - name: postgres-taskobj
      protocol: TCP
      port: 5432
      targetPort: 5432
