backend/Kubernetes/postgres-plat-deploy-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-customer
  template:
    metadata:
      labels:
        app: postgres-customer
    spec:
      containers:
        - name: postgres-customer
          image: postgres:10.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/customer/data
              name: postgres-pv-claim
      volumes:
      - name: postgres-pv-claim
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-customer-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-customer
  ports:
  - name: postgres-customer
    protocol: TCP
    port: 5432
    targetPort: 5432
