backend/Kubernetes/rabbitmq-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: rabbitmq-clusterip-srv
  ports:
    - name: employee
      protocol: TCP
      port: 80
      targetPort: 80
