backend/Kubernetes/ingress-routing-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx   
  rules:
    - host: paw.dk
      http:
        paths:
          - path: /api/employee
            pathType: Prefix
            backend:
              service:
                name: employee-clusterip-srv
                port:
                  number: 80
          - path: /api/customer
            pathType: Prefix
            backend:
              service:
                name: customer-clusterip-srv
                port:
                  number: 80
          - path: /api/task
            pathType: Prefix
            backend:
              service:
                name: task-clusterip-srv
                port:
                  number: 80
